integration/snapshots/extract-duplicate-requirement.snap
---
source: xtask/src/tests.rs
expression: snapshot
snapshot_kind: text
---
SPECIFICATION: [Testing](my-spec.md)
  SECTION: [Testing](#testing)
    TEXT[!MUST,implementation]: This MUST deduplicate the requirement.
