integration/snapshots/init-c.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [C](my-spec.md)
  SECTION: [C](#c)
    TEXT[implementation]: C SHOULD be auto-detected.
