integration/snapshots/init-python.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [Python](my-spec.md)
  SECTION: [Python](#python)
    TEXT[implementation]: Python SHOULD be auto-detected.
