integration/snapshots/init-rust.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [Rust](my-spec.md)
  SECTION: [Rust](#rust)
    TEXT[implementation]: Rust SHOULD be auto-detected.
