integration/snapshots/merge-three-package.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [My Specification](my-spec.md)
  SECTION: [Feature A](#feature-a)
    TEXT[!MUST]: Feature A MUST be implemented.

  SECTION: [Feature B](#feature-b)
    TEXT[!MUST,implementation]: Feature B MUST be implemented.

  SECTION: [Feature C](#feature-c)
    TEXT[!MUST]: Feature C MUST be implemented.

  SECTION: [Feature D](#feature-d)
    TEXT[!MUST,implementation]: Feature D MUST be implemented.
